codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__pnpm_update_available_history_cell_snapshot.snap
---
source: tui/src/history_cell/tests.rs
assertion_line: 1216
expression: rendered
---
╭──────────────────────────────────────────────────────╮
│ ✨ Update available! 0.1.27 -> 9.9.9                 │
│ Run pnpm add -g @agticorp/pfterminal to update.      │
│                                                      │
│ See full release notes:                              │
│ https://github.com/agtico/PfTerminal/releases/latest │
╰──────────────────────────────────────────────────────╯
